# python-template

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
