[project]
name = "template"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = []

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = [
  "*.ipynb"
]
line-length = 100

[tool.ruff.lint]
select = [
  "I",
  "E501",
  "F841",
  "ARG001"
]
ignore = [
  "E731",
  "E501"
]
